// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders basic icon successfully 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-icon"
  >
    <span
      class="pf-v6-c-icon__content"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 20 20"
        width="1em"
      >
        <path
          d="M18.71 4.27c-.4-.38-1.03-.37-1.41.02L7 14.59 2.71 10.3l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l4.65 4.65a1.499 1.499 0 0 0 2.12 0L18.72 5.71l.02-.02c.38-.4.37-1.03-.02-1.41Z"
        />
      </svg>
    </span>
  </span>
</DocumentFragment>
`;

exports[`renders progress icon successfully 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-icon pf-m-in-progress"
  >
    <span
      class="pf-v6-c-icon__content"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 20 20"
        width="1em"
      >
        <path
          d="M18.71 4.27c-.4-.38-1.03-.37-1.41.02L7 14.59 2.71 10.3l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l4.65 4.65a1.499 1.499 0 0 0 2.12 0L18.72 5.71l.02-.02c.38-.4.37-1.03-.02-1.41Z"
        />
      </svg>
    </span>
    <span
      class="pf-v6-c-icon__progress"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 20 20"
        width="1em"
      >
        <path
          d="M18.71 4.27c-.4-.38-1.03-.37-1.41.02L7 14.59 2.71 10.3l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l4.65 4.65a1.499 1.499 0 0 0 2.12 0L18.72 5.71l.02-.02c.38-.4.37-1.03-.02-1.41Z"
        />
      </svg>
    </span>
  </span>
</DocumentFragment>
`;

exports[`renders without children 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-icon"
  >
    <span
      class="pf-v6-c-icon__content"
    />
  </span>
</DocumentFragment>
`;
